Fixed weird fieldset alignment

--- a/src/components/form/_form.scss
+++ b/src/components/form/_form.scss
@@ -18,7 +18,6 @@
     margin-bottom: .767em;
     padding-right: $spacing-horizontal;
     position: relative;
-    top: .267em;
   }
 
   &__grid {
